# CPlusPlus

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cppcheck.yml  semgrep
AccountManagement/: Account.cpp  Account.h  CashAccount.cpp  CashAccount.h  CurrentAccount.cpp  CurrentAccount.h  SavingsAccount.cpp  SavingsAccount.h  main.cpp
AdvancedCPP/: AdvancedCPP.h  TypeDeduction.cpp
AdvancedCPP/Part1/: Lambda.cpp  UniformInitialization.cpp
AdvancedCPP/Part2/: copyControl.cpp  pointers.cpp
AdvancedCPP/Part3/: Lambda.cpp
AdvancedCPP/Part5/: Allocators.cpp  cycle.cpp  cycleBreak.cpp  useCount.cpp
AdvancedCPP/Part6/: Chrono.cpp  Random.cpp  Regex.cpp  gamma_distribution.txt  normal_distribution.txt  (+2 more)
CombatGame/: combatGame.cpp  combatGame.h  combatGame.txt
CourseManagement/: CourseManagement.cpp  CourseManagement.h
Exam2406/: exam.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Files/: Employee.cpp  division.cpp  division.txt  employee.txt  textFile.cpp  textFile.h
OperatorOverloading/: Complex.cpp  Date.cpp  Date.h  Euro.cpp  Overloading.h  RockPaperScrissors.cpp  Veichle.cpp  dateExcercise.cpp
Pointers/: Exercises.cpp  Pointers.h
Polymorphism/: Polygon.cpp  Polygon.h
ShoppingList/: ListItem.cpp  ListItem.h  ShoppingList.cpp  ShoppingList.h  main.cpp
ShoppingListSimple/: main.cpp
SingleLinkedLists/: ListOfPeople.cpp  ListOfPeople.h  PeopleHandling.cpp  Person.cpp  Person.h  peopleHandling.h
Templates/: Templates.cpp  Templates.h
Utils/: Utils.cpp  Utils.h
dynamicMemory/: dynamicArray.cpp  dynamicArray.h  game.cpp
(+12 files in other folders)
